# fpl-insights

./: .gitignore  CMakeLists.txt  ReadMe  ReadMe.md  cmake-variants.yaml  fetch.cpp  form.cpp  form.hpp  fpl-predict  main.cpp  player_data.csv  prediction.ipynb  prediction.py  run.bat  run.sh  score.cpp
csv/: player_data.csv  player_fixture.csv  predictions.csv
inc/: PyTrain.hpp  csv.hpp  fetch.hpp  player_form.hpp  score.hpp  team_form.hpp  team_select.hpp
src/: CMakeLists.txt  PyTrain.cpp  csv.cpp  fetch.cpp  main.cpp  player_form.cpp  score.cpp  team_form.cpp  team_select.cpp
